{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 120,
  "lineage": "921701c0-2466-ae80-5087-00311bc3c266",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "PrivateElasticIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce31aaa7b648c8c3",
            "domain": "vpc",
            "id": "eipalloc-0ce31aaa7b648c8c3",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-223-103-53.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.103.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Dev",
              "Name": "PrivateMyNATgw",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "PrivateMyNATgw",
              "Terraform": "True"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastionServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05bfbece1ed5beb54",
            "arn": "arn:aws:ec2:us-east-2:058456453894:instance/i-0d5634becc207eaed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5634becc207eaed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "OhioLocalKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c38b605f3603f0f5",
            "private_dns": "ip-10-0-1-206.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.206",
            "public_dns": "ec2-18-191-235-123.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.235.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e63bc9ca3068ef1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060a087c00470a7a9",
            "tags": {
              "Environment": "Dev",
              "Name": "BastionServer",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "BastionServer",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0018b5fdf9bb0c182"
            ]
          },
          "dependencies": [
            "aws_security_group.BastionSg",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CICDServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05bfbece1ed5beb54",
            "arn": "arn:aws:ec2:us-east-2:058456453894:instance/i-04f4e504464b1d5a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f4e504464b1d5a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "OhioLocalKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c3ca362a895b5ce",
            "private_dns": "ip-10-0-4-50.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.50",
            "public_dns": "ec2-18-221-23-45.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.23.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0caaf2911507d1958",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6b527f1bea21c6d",
            "tags": {
              "Environment": "Dev",
              "Name": "CICDServer",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "CICDServer",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09f7beb8a0a10e96e"
            ]
          },
          "dependencies": [
            "aws_security_group.CICDSg",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:internet-gateway/igw-036e24009daedadca",
            "id": "igw-036e24009daedadca",
            "owner_id": "058456453894",
            "tags": {
              "Environment": "Dev",
              "Name": "myVPC",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "myVPC",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "PrivateMyNATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce31aaa7b648c8c3",
            "connectivity_type": "public",
            "id": "nat-0f172ff1e0e02248f",
            "network_interface_id": "eni-0e7b0102b93b5bee3",
            "private_ip": "10.0.1.136",
            "public_ip": "18.223.103.53",
            "subnet_id": "subnet-060a087c00470a7a9",
            "tags": {
              "Environment": "Dev",
              "Name": "PrivateMyNATgw",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "PrivateMyNATgw",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "aws_eip.PrivateElasticIP",
            "aws_internet_gateway.myIGW",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:route-table/rtb-0bccc202c09a6ebed",
            "id": "rtb-0bccc202c09a6ebed",
            "owner_id": "058456453894",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f172ff1e0e02248f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "PrivateRouteTable",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "PrivateRouteTable",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.PrivateElasticIP",
            "aws_internet_gateway.myIGW",
            "aws_nat_gateway.PrivateMyNATgw",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:route-table/rtb-0d79d5865c7b92b13",
            "id": "rtb-0d79d5865c7b92b13",
            "owner_id": "058456453894",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036e24009daedadca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "publicRouteTable",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "publicRouteTable",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DataSubnetAssoication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e68fdb5823dd692b",
            "route_table_id": "rtb-0bccc202c09a6ebed",
            "subnet_id": "subnet-013062e76bd1cbc38"
          },
          "dependencies": [
            "aws_eip.PrivateElasticIP",
            "aws_internet_gateway.myIGW",
            "aws_nat_gateway.PrivateMyNATgw",
            "aws_route_table.PrivateRouteTable",
            "aws_subnet.datasubnet",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd5db24c5033d0ab",
            "route_table_id": "rtb-0bccc202c09a6ebed",
            "subnet_id": "subnet-0c678568b7d467bae"
          },
          "dependencies": [
            "aws_eip.PrivateElasticIP",
            "aws_internet_gateway.myIGW",
            "aws_nat_gateway.PrivateMyNATgw",
            "aws_route_table.PrivateRouteTable",
            "aws_subnet.datasubnet",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e78c54aea8d9525e",
            "route_table_id": "rtb-0bccc202c09a6ebed",
            "subnet_id": "subnet-0cf72f1e367764e40"
          },
          "dependencies": [
            "aws_eip.PrivateElasticIP",
            "aws_internet_gateway.myIGW",
            "aws_nat_gateway.PrivateMyNATgw",
            "aws_route_table.PrivateRouteTable",
            "aws_subnet.datasubnet",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetAssoication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c05097a2a37b222",
            "route_table_id": "rtb-0bccc202c09a6ebed",
            "subnet_id": "subnet-01ecddd28a66756d8"
          },
          "dependencies": [
            "aws_eip.PrivateElasticIP",
            "aws_internet_gateway.myIGW",
            "aws_nat_gateway.PrivateMyNATgw",
            "aws_route_table.PrivateRouteTable",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06338ae2bc5f5cf17",
            "route_table_id": "rtb-0bccc202c09a6ebed",
            "subnet_id": "subnet-0de0a85a1563e1a24"
          },
          "dependencies": [
            "aws_eip.PrivateElasticIP",
            "aws_internet_gateway.myIGW",
            "aws_nat_gateway.PrivateMyNATgw",
            "aws_route_table.PrivateRouteTable",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015824ff48b751e36",
            "route_table_id": "rtb-0bccc202c09a6ebed",
            "subnet_id": "subnet-0f4c9232620f683dc"
          },
          "dependencies": [
            "aws_eip.PrivateElasticIP",
            "aws_internet_gateway.myIGW",
            "aws_nat_gateway.PrivateMyNATgw",
            "aws_route_table.PrivateRouteTable",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd47e7263e50d8b8",
            "route_table_id": "rtb-0d79d5865c7b92b13",
            "subnet_id": "subnet-060a087c00470a7a9"
          },
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.publicRouteTable",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff96dd2b01f6dc41",
            "route_table_id": "rtb-0d79d5865c7b92b13",
            "subnet_id": "subnet-0e6b527f1bea21c6d"
          },
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.publicRouteTable",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038a218e122b58fd9",
            "route_table_id": "rtb-0d79d5865c7b92b13",
            "subnet_id": "subnet-05bc6f80dbd5a3645"
          },
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.publicRouteTable",
            "aws_subnet.publicSubnet",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BastionSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:security-group/sg-0018b5fdf9bb0c182",
            "description": "Allow TLS inbound traffic to Bastion Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0018b5fdf9bb0c182",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH to Admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BastionSg",
            "name_prefix": "",
            "owner_id": "058456453894",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "BastionSg",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "BastionSg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CICDSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:security-group/sg-09f7beb8a0a10e96e",
            "description": "Allow TLS inbound traffic to CICD Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f7beb8a0a10e96e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow to Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH to Admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "CICDSg",
            "name_prefix": "",
            "owner_id": "058456453894",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "CICDSg",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "CICDSg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apacheSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:security-group/sg-05b03111bb8b059ff",
            "description": "Allow TLS inbound traffic to apache Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b03111bb8b059ff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH to Admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f7beb8a0a10e96e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "apacheSg",
            "name_prefix": "",
            "owner_id": "058456453894",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "CICDSg",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "CICDSg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.CICDSg",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:subnet/subnet-013062e76bd1cbc38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013062e76bd1cbc38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058456453894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "DataSubnet1",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DataSubnet1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:subnet/subnet-0c678568b7d467bae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c678568b7d467bae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058456453894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "DataSubnet2",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DataSubnet2",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:subnet/subnet-0cf72f1e367764e40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf72f1e367764e40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058456453894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "DataSubnet3",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "DataSubnet3",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:subnet/subnet-01ecddd28a66756d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ecddd28a66756d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058456453894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "prvateSubnet1",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "prvateSubnet1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:subnet/subnet-0de0a85a1563e1a24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de0a85a1563e1a24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058456453894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "prvateSubnet2",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "prvateSubnet2",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:subnet/subnet-0f4c9232620f683dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4c9232620f683dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058456453894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "prvateSubnet3",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "prvateSubnet3",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:subnet/subnet-060a087c00470a7a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060a087c00470a7a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058456453894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "publicSubnet1",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "publicSubnet1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:subnet/subnet-0e6b527f1bea21c6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6b527f1bea21c6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058456453894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "publicSubnet2",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "publicSubnet2",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:subnet/subnet-05bc6f80dbd5a3645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bc6f80dbd5a3645",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058456453894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "publicSubnet3",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "publicSubnet3",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0737e81181f27ca34"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058456453894:vpc/vpc-0737e81181f27ca34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060f676905adbe828",
            "default_route_table_id": "rtb-069cade2503e67133",
            "default_security_group_id": "sg-045075885d19c67b1",
            "dhcp_options_id": "dopt-0b2128989594fb437",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0737e81181f27ca34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069cade2503e67133",
            "owner_id": "058456453894",
            "tags": {
              "Environment": "Dev",
              "Name": "myVPC",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "myVPC",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}